# taskfile_help

./: .coverage  .gitignore  .pymarkdown.json  CHANGELOG.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  Makefile.ci  README.md  Taskfile.yml  docker-compose.ci.yml  mkdocs.yml  pyproject.toml  taskfile_help.yml.example
.githooks/: README.md  commit-msg  post-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
docker/: ci-entrypoint.sh  ci-runner.Dockerfile
docs/: gen_ref_pages.py  githooks.md  index.md  tests.md
docs/development/: architecture.md  contributing.md  guide.md  releasing.md  testing.md  two_step_parser.md
docs/future/: README.md  autocompletion.md  dependencies.md  validation.md
docs/javascripts/: extra.js
docs/setup/: completion.md  configuration.md  installation.md  quickstart.md
examples/: two_step_parser_example.py
scripts/: ci-local.sh  custom_argparse.py  dev-metrics.py  generate_test_docs.py  tree-to-github-markdown.sh
site/: 404.html  gen_ref_pages.py  index.html  objects.inv  sitemap.xml
site/development/architecture/: index.html
site/development/contributing/: index.html
site/development/guide/: index.html
site/development/testing/: index.html
site/javascripts/: extra.js
site/reference/SUMMARY/: index.html
site/reference/taskfile_help/: index.html
site/reference/taskfile_help/config/: index.html
site/reference/taskfile_help/discovery/: index.html
site/reference/taskfile_help/output/: index.html
site/reference/taskfile_help/parser/: index.html
site/reference/taskfile_help/taskfile_help/: index.html
site/search/: search_index.json
site/setup/configuration/: index.html
site/setup/installation/: index.html
site/setup/quickstart/: index.html
site/stylesheets/: extra.css
src/taskfile_help/: __main__.py  completion.py  config.py  discovery.py  output.py  parser.py  search.py  taskfile_help.py  two_step_parser.py  validator.py
taskfiles/: Taskfile-docs.yml  Taskfile-env.yml  Taskfile-format.yml  Taskfile-git.yml  Taskfile-lint.yml  Taskfile-metrics.yml  Taskfile-release.yml  Taskfile-test.yml  Taskfile-version.yml
tests/e2e/: README.md  test_cli.py
tests/unit/: test_completion.py  test_config.py  test_config_env.py  test_config_file.py  test_discovery.py  test_edge_cases.py  test_output.py  test_parser.py  test_search.py  test_taskfile_help.py  test_taskfile_help_coverage.py  test_two_step_parser.py  test_validator.py
